--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.4.1"
   },
